--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <module>HibernateOnetoMany</module>
         <module>HibernateManytoMany</module>
         <module>HibernateConnectionPool</module>
-        <module>HibernateCache</module>
+        <module>HibernateHazelcastCache</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
