--- a/HibernateHazelcastCache/pom.xml
+++ b/HibernateHazelcastCache/pom.xml
@@ -25,11 +25,11 @@
             <artifactId>hazelcast-hibernate52</artifactId>
             <version>1.2.3</version>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>com.hazelcast</groupId>
             <artifactId>hazelcast-client</artifactId>
             <version>3.9.4</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>com.hazelcast</groupId>
             <artifactId>hazelcast</artifactId>
